--- a/views/index.html
+++ b/views/index.html
@@ -132,9 +132,6 @@
                 }
             }
         }
-        
-
-        
         var socket = io();
 
         socket.on('force_disconnect', function(data){
@@ -142,9 +139,7 @@
             window.close();
             self.close();
             window.opener = window.location.href; self.close();
-            window.open('about:blank', '_self').close();
-            
-            
+            window.open('about:blank', '_self').close();   
         })
 
         socket.on('user_id', function(data){
@@ -169,13 +164,27 @@
         }
         })
 
-        
         var enemys = [];
         var enemyRadius = 10;
         var enemyAliveTime = 400;
         function EnemyBall(id){
             this.id = id;
             this.color = "#000000";
+            this.startingX = 1024/2;
+            this.startingY = 768/2;
+            this.destinationX = 0;
+            this.destinationY = 0;
+            this.initialX = 0;
+            this.initialY = 0;
+            this.wall = 0;
+        }
+
+        var items = [];
+        var itemRadius = 20;
+        var itemAliveTime = 1000;
+        function itemBall(id){
+            this.id = id;
+            this.color = "#C0FFEE";
             this.startingX = 1024/2;
             this.startingY = 768/2;
             this.destinationX = 0;
@@ -200,6 +209,22 @@
             enemy.speedY = data.speedY;
             enemys.push(enemy);
             // console.log(enemys);
+        })
+
+        socket.on('item_generator', function(data){
+            let item = new itemBall()
+            item.startingX = data.startingX;
+            item.startingY = data.startingY;
+            item.initialX = data.startingX;
+            item.initialY = data.startingY;
+            //적 목적지 데이터 받아오기 해야함
+            item.destinationX = data.destinationX;
+            item.destinationY = data.destinationY;
+            item.wall = data.wall;
+            item.speedX = data.speedX;
+            item.speedY = data.speedY;
+            items.push(item);
+            console.log(items);
         })
 
         function renderGame() {
@@ -228,6 +253,16 @@
                     ctx.fillStyle = enemy.color;
                     ctx.beginPath();
                     ctx.arc(enemy.startingX, enemy.startingY, enemyRadius, 0, Math.PI *2, false);
+                    ctx.closePath();
+                    ctx.fill();
+                }
+
+                for(let j=0; j<items.length;j++){
+                    let item=items[j];
+
+                    ctx.fillStyle = item.color;
+                    ctx.beginPath();
+                    ctx.arc(item.startingX, item.startingY, itemRadius, 0, Math.PI *2, false);
                     ctx.closePath();
                     ctx.fill();
                 }
@@ -313,19 +348,108 @@
                     }
                 }
 
+                // 아이템 위치 옮겨주는 코드
+                for ( let k = 0 ; k < items.length; k++){
+                    let item = items[k];
+                    if(item.wall == 0){//leftSide
+                        if (item.destinationY >= item.startingY){
+                            var distanceX = item.destinationX - item.initialX;
+                            var distanceY = item.destinationY - item.initialY;
+                            var speedY = distanceY/itemAliveTime;
+                            var speedX = distanceX/itemAliveTime;
+                            item.startingX += speedX;
+                            item.startingY += speedY;
+                        }
+                        else{
+                            var distanceX = item.destinationX - item.initialX;
+                            var distanceY = item.initialY - item.destinationY;
+                            var speedY = distanceY/itemAliveTime;
+                            var speedX = distanceX/itemAliveTime;
+                            item.startingX += speedX;
+                            item.startingY -= speedY;
+                        }
+                    }
+                    else if (item.wall == 1){
+                        if (item.destinationY >= item.startingY){
+                            var distanceX = Math.abs(item.destinationX - item.initialX);
+                            var distanceY = Math.abs(item.destinationY - item.initialY);
+                            var speedY = distanceY/itemAliveTime;
+                            var speedX = distanceX/itemAliveTime;
+                            item.startingX -= speedX;
+                            item.startingY += speedY;
+                        }
+                        else{
+                            var distanceX = Math.abs(item.destinationX - item.initialX);
+                            var distanceY = Math.abs(item.initialY - item.destinationY);
+                            var speedY = distanceY/itemAliveTime;
+                            var speedX = distanceX/itemAliveTime;
+                            item.startingX -= speedX;
+                            item.startingY -= speedY;
+                        }
+                    }
+                    else if (item.wall == 2){
+                        if (item.destinationX >= item.startingX){
+                            var distanceX = Math.abs(item.destinationX - item.initialX);
+                            var distanceY = Math.abs(item.destinationY - item.initialY);
+                            var speedY = distanceY/itemAliveTime;
+                            var speedX = distanceX/itemAliveTime;
+                            item.startingX += speedX;
+                            item.startingY += speedY;
+                        }
+                        else{
+                            var distanceX = Math.abs(item.destinationX - item.initialX);
+                            var distanceY = Math.abs(item.initialY - item.destinationY);
+                            var speedY = distanceY/itemAliveTime;
+                            var speedX = distanceX/itemAliveTime;
+                            item.startingX -= speedX;
+                            item.startingY += speedY;
+                        }
+                    }
+                    else if (item.wall == 3){
+                        if (item.destinationX >= item.startingX){
+                            var distanceX = Math.abs(item.destinationX - item.initialX);
+                            var distanceY = Math.abs(item.destinationY - item.initialY);
+                            var speedY = distanceY/itemAliveTime;
+                            var speedX = distanceX/itemAliveTime;
+                            item.startingX += speedX;
+                            item.startingY -= speedY;
+                        }
+                        else{
+                            var distanceX = Math.abs(item.destinationX - item.initialX);
+                            var distanceY = Math.abs(item.initialY - item.destinationY);
+                            var speedY = distanceY/itemAliveTime;
+                            var speedX = distanceX/itemAliveTime;
+                            item.startingX -= speedX;
+                            item.startingY -= speedY;
+                        }
+                    }
+                    
+                    if (item.startingX < -100 || item.startingX > 1400 || item.startingY < -100 || item.startingY > 1400){
+                        items.splice(k,1);
+                    }
+                }
+
                 // 플레이어 옮겨주는 코드
                 let curPlayer = ballMap[myId];
                 if (rightPressed){
-                    curPlayer.x += playerSpeed;
+                    if (curPlayer.x <= 1024){
+                        curPlayer.x += playerSpeed;
+                    }
                 }
                 if (leftPressed ){
-                    curPlayer.x -= playerSpeed;
+                    if(curPlayer.x >= 0){
+                        curPlayer.x -= playerSpeed;
+                    }
                 }
                 if(upPressed ){
-                    curPlayer.y -= playerSpeed;
+                    if(curPlayer.y >= 0){
+                        curPlayer.y -= playerSpeed;
+                    }
                 }
                 if(downPressed ){
-                    curPlayer.y += playerSpeed;
+                    if(curPlayer.y <= 768){
+                        curPlayer.y += playerSpeed;
+                    }
                 }
 
                 sendData();
